* Add Object.isOwnProperty() to aid in detecting "own" vs. "inherited" properties. [Rails Trac #9700, #11043] [Prototype LH #243] [FuseJS LH #8] [arandes, Ben, grey, jddalton]

* Remove the "&_=" Safari 2 ajax bug workaround for the http PUT method. [Rails Trac #2258] [Prototype LH #327] [jddalton, Mark van Eijk, Shane Vitarana]
  Fixed in Rails by changeset http://dev.rubyonrails.org/changeset/2106.

* Stop Element#show clearing display values when called before Element#hide. [Prototype LH #177] [jddalton, quamis]

* Stop Element#getHeight/Element#getWidth from setting an element's position to "absolute" because it causes shrink-wrapping. [Prototype LH #313] [datamagi, jddalton]

* Remove uneeded $R() and $H() calls so ObjectRange and Hash can be optional. [FuseJS LH #14] [jddalton]

* Change to initial Fuse namespace. [FuseJS LH #1] [jddalton]
  Note: Backwards compatibility warning.
   - Exposed Fuse.Browser.Bug() and Fuse.Browser.Feature()
   - Moved browser user agent sniffs to Fuse.Browser.Agent
   - Removed Fuse.BrowserFeatures

* Rename internal method "mergeList" to "concatList" to better express its functionality. [jddalton]

* Updates to Array API [FuseJS LH #15] [Prototype LH #356] [jddalton, Joe Gornick, quamis]
  Note: Backwards compatibility warning.
   - Added Array#insert method
   - Renamed methods: include -> contains, uniq -> unique
   - Removed methods: detect, reject, reverse
   - Removed aliases: all, any, collect, entries, find, findAll, member, select
   - Updated methods:
     Array#contains: Added a strict paramter for strict only comparisons.

     Array#first: Add optional parameters to accept a number/iterator.
       * first(n): Returns an array containing the first n of the list.
       * first(iterator, [context]): Returns first item when iterator returns true.

     Array#last: Add optional parameters to accept a number/iterator.
       * last(n): Returns an array containing the last n of the list.